# meson

./: run_project_tests.py
.github/: README.md
.github/workflows/: nonnative.yml
docs/markdown/: Machine-files.md  Node-API-module.md
mesonbuild/: coredata.py  environment.py  mcompile.py  minit.py  minstall.py  mtest.py
mesonbuild/backend/: ninjabackend.py
mesonbuild/cmake/: interpreter.py  traceparser.py  tracetargets.py
mesonbuild/compilers/mixins/: emscripten.py
mesonbuild/interpreter/: interpreter.py  kwargs.py
mesonbuild/modules/: node-api.py  node_api.py  python.py
test cases/cmake/28 config overrides/: meson.build
test cases/cmake/28 config overrides/subprojects/cmMod/: CMakeLists.txt  cmModConfig.cmake
test cases/cmake/29 nested deps/: meson.build
test cases/cmake/30 install files/: main.cpp  meson.build  test.json
test cases/cmake/31 custom binaries/: check.py  meson.build  nativefile.ini  ninja2.py.in
test cases/cmake/31 custom binaries/subprojects/cmMod/: CMakeLists.txt  cmMod.hpp
test cases/cmake/31 rpath/: test.json
test cases/node-api/1 hello_world/: meson.build  meson.options  package-lock.json  package.json  test.js  test.json
test cases/node-api/2 subdir/: meson.build  test.json
test cases/node-api/2 subdir/subdir/: meson.build
test cases/node-api/3 async/: meson.build
test cases/node-api/4 legacy cjs/: meson.build
test cases/node-api/5 plain c/: meson.build
test cases/node-api/6 no exceptions/: hello_world.cc  meson.build
test cases/node-api/8 swig/: example_wrap.cxx  test-native.cjs  test-wasm.mjs
